# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  image.h  main  main.cpp  material.h
include/: animation.h  image.h  light.h  lightning.h  material.h  mesh-loader.h  ray.h  raytracer.h  scene.h  textures.h  utils.h
include/lights/: light.h  point.h  surface.h
include/loaders/: loader.h  obj-loader.h
include/objects/: box.h  cone.h  mesh.h  object.h  plane.h  sphere.h  square.h  triangle.h
include/tracers/: bvh.h  kdtree.h  naive.h  tracer.h
src/: animation.cpp  image.cpp  light.cpp  lightning.cpp  material.cpp  mesh-loader.cpp  ray.cpp  raytracer.cpp  scene.cpp  textures.cpp
src/lights/: light.cpp  point.cpp  surface.cpp
src/loaders/: loader.cpp  obj-loader.cpp
src/objects/: box.cpp  object.cpp  square.cpp
src/tracers/: kdtree.cpp  naive.cpp  tracer.cpp
